--- a/projects.json
+++ b/projects.json
@@ -146,8 +146,8 @@
     "title": "Panthera",
     "tags": ["HTML5", "CSS3"],
     "descriptionShort": {
-      "fr": "Un site optimisé pour respecter les standards en matière de référencement, d'accessibilité et de performance",
-      "en": "An optimized website excelling in SEO, accessibility, and performance standards"
+      "fr": "Optimisation d'un site existant pour respecter les standards en matière de référencement, d'accessibilité et de performance",
+      "en": "Optimization of an existing website for excelling in SEO, accessibility, and performance standards"
     },
     "descriptionLong": {
       "fr": [
