--- a/projects.json
+++ b/projects.json
@@ -1,7 +1,7 @@
 [
   {
     "id": "p1",
-    "imagePath": "/fannilestar/images/project-images/lahmacun/lahmacun1.jpg",
+    "imagePath": "/fannilestar/images/project-images/lahmacun/lahmacun1.webp",
     "title": "Lahmacun",
     "tags": ["React Native", "Expo"],
     "descriptionShort": {
@@ -25,7 +25,7 @@
   },
   {
     "id": "p2",
-    "imagePath": "/fannilestar/images/project-images/kasa/kasa1.jpg",
+    "imagePath": "/fannilestar/images/project-images/kasa/kasa1.webp",
     "title": "Kasa",
     "tags": ["JavaScript", "React"],
     "descriptionShort": {
@@ -53,7 +53,7 @@
   },
   {
     "id": "p3",
-    "imagePath": "/fannilestar/images/project-images/kanap/kanap1.jpg",
+    "imagePath": "/fannilestar/images/project-images/kanap/kanap1.webp",
     "title": "Kanap",
     "tags": ["JavaScript"],
     "descriptionShort": {
@@ -85,7 +85,7 @@
   },
   {
     "id": "p4",
-    "imagePath": "/fannilestar/images/project-images/ohmyfood/ohmyfood1.jpg",
+    "imagePath": "/fannilestar/images/project-images/ohmyfood/ohmyfood1.webp",
     "title": "OhmyFood",
     "tags": ["HTML5", "CSS3"],
     "descriptionShort": {
@@ -111,7 +111,7 @@
   },
   {
     "id": "p5",
-    "imagePath": "/fannilestar/images/project-images/booki/booki1.jpg",
+    "imagePath": "/fannilestar/images/project-images/booki/booki1.webp",
     "title": "Booki",
     "tags": ["HTML5", "CSS3"],
     "descriptionShort": {
@@ -139,7 +139,7 @@
   },
   {
     "id": "p6",
-    "imagePath": "/fannilestar/images/project-images/hottakes/hottakes1.jpg",
+    "imagePath": "/fannilestar/images/project-images/hottakes/hottakes1.webp",
     "title": "Piiquante",
     "tags": ["JavaScript", "Node.js"],
     "descriptionShort": {
@@ -165,7 +165,7 @@
   },
   {
     "id": "p7",
-    "imagePath": "/fannilestar/images/project-images/panthera/panthera1.jpg",
+    "imagePath": "/fannilestar/images/project-images/panthera/panthera1.webp",
     "title": "Panthera",
     "tags": ["HTML5", "CSS3"],
     "descriptionShort": {
